# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-client-2.1.9 (02 Dec 2009)

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.9.ebuild:
  Bump version.

*calculate-client-2.1.8 (01 Dec 2009)

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.8.ebuild:
  Ebuild for new version of calculate-client.

  05 Aug 2009; Aleksandr Yakimov (yaleks) <yaleks@gentoo.ru>
  calculate-client-2.1.3.ebuild, +metadata.xml:
  Ebuild fix
