@@ -30,5 +30,6 @@ x11-drivers/nvidia-drivers amd64 x86
 ~net-print/cnijfilter-3.00 amd64 x86
 ~app-emulation/emul-linux-x86-bjdeps-0.1 amd64 x86
 
+~dev-python/py-smbpasswd-1.0 amd64
 #fix compile 1.0.2-r1
 =media-tv/tvtime-1.0.2-r2 amd64 x86
