@@ -1,11 +1,13 @@
 AUX calculate-client-2.1.7-r1.patch 1281 RMD160 a21e2e38a920f8278d0dea6d07d23bbf200b7bb8 SHA1 cb6595fbd6f88b003f2ebf32b90bc8769094e813 SHA256 808d35624bffc53298bcff54dd1a65d933ae3ce0334fe1880c4f3cd43e9f759d
 DIST calculate-client-2.1.10.tar.bz2 68111 RMD160 469473325338cc4e2e69aee69d81fc197ed3b0a4 SHA1 b2facf43d67780ba0d21fa10224469d3e8764f56 SHA256 ae6ea57d8409fb19d594cadd8f170b51808ea13b05df3a4799bed865fd1837c5
+DIST calculate-client-2.1.11.tar.bz2 76735 RMD160 a31fff0135103bd32aee1c903eeae2b059e31c0b SHA1 1a1f05ab8bcc0aeb04bbf10371bec9aaad09cf18 SHA256 3f3410b697e9ebf4965bf0886b3ad8c40815c2ee464fdaaa90e220fb5b51f723
 DIST calculate-client-2.1.4.tar.bz2 59072 RMD160 fa3dc313569474fc1beecd0116b34ade39c5812a SHA1 afc9c207344ff69a41e7c7d606d97fafdcf1a026 SHA256 68d493f81e7e2ba29ca171265571f7063cb8381f26a29d4f403bdb37d4297e7b
 DIST calculate-client-2.1.6.tar.bz2 62209 RMD160 7368fba4ea4a79af7c2123b0cadcea57759d988d SHA1 7acf5bbec387469cb07dcc151cfc75eb35fda0e3 SHA256 dcda6954ace2c8ac85fefea7f63f731aab3757070daf78cde8fa6c8ca1bf4322
 DIST calculate-client-2.1.7.tar.bz2 63073 RMD160 ccc6039fcea31704ba061c16acb57b4bfb378a2e SHA1 20b7aa2e4586d06bae6ab296a6cdd105ae719027 SHA256 996b2c6329945d6b41ab2760fc39ad6f125b051ddfda166b07f1b71db958ea97
 DIST calculate-client-2.1.8.tar.bz2 116827 RMD160 9572a7cbe37f0522094431ffbf4b72c366eea0f7 SHA1 0a07864e31ae26b37ffa923728c745224b2b1be8 SHA256 49a0f382907e315670f117a90919137dc04515be0f86fb56a242ef80e6194424
 DIST calculate-client-2.1.9.tar.bz2 117610 RMD160 bb2d3d30b3ca16f3413106708792b5c4e1830e24 SHA1 4e2eed1619a911c0952b79d2c0d15374564abbd4 SHA256 58b00bce647889ae5d11fb9cbbb8390d2b56fafe8f857019bdd95e7cdf6cc36c
 EBUILD calculate-client-2.1.10.ebuild 1606 RMD160 73baae905f2d2f2984865faa314d3fb551f0cc68 SHA1 4cae25541ab2438058e0d2598f31bdcfd12ca4fa SHA256 412cb34f3d1521b10bb5d51643836aee3966871961b5f6679915ffa599e45cb3
+EBUILD calculate-client-2.1.11.ebuild 1666 RMD160 1b9daee165695618b7404e51e58436b04310f744 SHA1 63b0908f95087157bd20f340b9c85aea13f46adf SHA256 a1c36d830d38872afaa8c2d691af7a9453008d2448a4f8dda5000e2880b2f57c
 EBUILD calculate-client-2.1.4-r1.ebuild 1607 RMD160 1805a60fe43dc433a617a9d6b959389f18ca848b SHA1 abbbff04c6cf6b19cefa2969d09d26fbfea35353 SHA256 75939e766823bb2ddd34a77af6ab86dc0ffb0693eef8dbfbda886cb20eebd834
 EBUILD calculate-client-2.1.6.ebuild 1609 RMD160 f5ce7dce6b2e7e1a8bf00ef1a3f99005a5fad653 SHA1 dcbd6bf33f8597162f10042209369a7579242279 SHA256 af44e5162071e59babc99f6ab1bc5b0bb285c95b208eca96b4a6422478112d04
 EBUILD calculate-client-2.1.7-r1.ebuild 1772 RMD160 a3e9c9e7dffa4bf2d166f52f21b8be68967d6e8f SHA1 526870eaf6b800fb9f58f22a41bbaaa027131147 SHA256 46a1aa976a8fe10f351191a866d50419282157f25aff82a5cf4c34e41729aea0
@@ -13,5 +15,5 @@ EBUILD calculate-client-2.1.7.ebuild 1609 RMD160 f5ce7dce6b2e7e1a8bf00ef1a3f9900
 EBUILD calculate-client-2.1.8.ebuild 1606 RMD160 29e6db9602853fd07410bb438c36383fc8530e5b SHA1 6a080a7b0c224c8a2c73749b38cfd81733a324da SHA256 445343909ef13079b04b6923b451f20643bd00f65be722a52fde91ccedb687d9
 EBUILD calculate-client-2.1.9.ebuild 1606 RMD160 29e6db9602853fd07410bb438c36383fc8530e5b SHA1 6a080a7b0c224c8a2c73749b38cfd81733a324da SHA256 445343909ef13079b04b6923b451f20643bd00f65be722a52fde91ccedb687d9
 EBUILD calculate-client-9999.ebuild 1486 RMD160 5634d2721523c34eac17f44e81156ddc1292bab2 SHA1 c143ac60dd55b1500ea1c0380a45988778e7fb9c SHA256 8e3da523aaf54307b8c9e6f667fc594c239d1ddc9a1f7356469517295322e105
-MISC ChangeLog 577 RMD160 37a93de3d78dc1f3360e2e2cb208600124275450 SHA1 06d1c23647deafc5177522c9d2536ab011fd3e6f SHA256 12132add2da7d998cf49836c794a496bad7fefc12959d6aaed3f34195e093033
+MISC ChangeLog 728 RMD160 d1930e43c688728e8a0cd29012a36b6717cc7611 SHA1 66c877219c6990a8d7edcb5f0bc34d5c63239977 SHA256 1240a291eb139f04c14b4fe6f8f91fd35e64f19f1efcadb2849f5c6c8cbb9d4f
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
