@@ -5,11 +5,13 @@ DIST calculate-server-2.1.6-r1.tar.bz2 154333 RMD160 46896e8cb887228e4b33cfad92e
 DIST calculate-server-2.1.6.tar.bz2 154350 RMD160 d9b857fc20e963cee015ffb285bbbb68cf0da133 SHA1 dda2fa50f319f7b4cf011dd90dea6ac0fe1c068e SHA256 2c2e0880d5ae997717e4fc9da7f1536c650191f1087b0fc00247e75395b9e8ab
 DIST calculate-server-2.1.7.tar.bz2 154321 RMD160 f624bf46820b4d93169aa1abb9201e962d9988f0 SHA1 ea7ea86ef50ba71e37a2f80393dea386784c1f3a SHA256 6522377222517a7cca5c5a0df62360868efde73b36d581f5a086f778710dcb0d
 DIST calculate-server-2.1.8.tar.bz2 154625 RMD160 9998acb81fae3b6d4a4bd450d9faed2ab68f4f9e SHA1 00efa357432fbaee955b5284ffa2ccc4ded354fa SHA256 69957f74f8682935699f884b186b5b5f909453ad82deaa6fad285ff9c6cbcaa6
+DIST calculate-server-2.1.9.tar.bz2 155585 RMD160 ee46673ca825c79c315076790e48a74cb0846d44 SHA1 90917d8855dd4d87bd9f3df7892a87823ddd4c98 SHA256 6a5cad963d842b189300398446a6b69431c4c4bff5205eb322e919dd47d2e868
 EBUILD calculate-server-2.1.5-r2.ebuild 5261 RMD160 1f74308ac9eb78422c1530967ca0f82cf68a6198 SHA1 b4a1d8412ef801c9a48a46310a554d0c0942cea3 SHA256 6c0fe4e6b269e5c892e8420d123deaf36612a92a921873586f215b5f91cecddf
 EBUILD calculate-server-2.1.6-r1.ebuild 5102 RMD160 4041b5bb095c0567aafa92a0458a4f5e8c178743 SHA1 fd6e3ca606af59dbd4aa9a0f67b8356ddfe04e04 SHA256 3d2425658e13bc0beaddfce23f9507d70efc97590137bfd19304c6e3db5cbc5d
 EBUILD calculate-server-2.1.6.ebuild 5078 RMD160 a69211cbbf172260db125b64db3d931cbaec00e6 SHA1 498a844ce008a90c472e03559c092ee673a5f3b0 SHA256 076c53da76a0f3137012293d5f0e6ab8437408c572d2ed2c1818d7aa7304e19e
 EBUILD calculate-server-2.1.7-r1.ebuild 5275 RMD160 1f5f49295ae71e06ff019f5ec22a068763affe93 SHA1 57b82a324202057292fd3bef5337a80549fd2912 SHA256 1eb9adae943ef042b9b4a7c3fcc40ca3bf878ad9f2b5f9fcf2a089567dd26509
 EBUILD calculate-server-2.1.8.ebuild 5086 RMD160 5879b2b2198f2fbd3c64062b45cd908a26c24d29 SHA1 92b92e49cec792e148181da9fc3b6ad134ac5e28 SHA256 8ccb307bd635f1cf2b2d70249dbfc1e6aa559c8c10a04cdabd260d4948eeaaab
+EBUILD calculate-server-2.1.9.ebuild 5045 RMD160 486f51688740cb0efa74a194daf1baedf76821e9 SHA1 c98d6becba828cae848416430245eda9dc5ffd71 SHA256 8711f5f7c51a25a0b162acfce7f379d1a9a4a75aa6a8507f5ba5f541aa5c8473
 EBUILD calculate-server-9999.ebuild 1154 RMD160 3cc8e7db188c9cb1abc2732223baa46e81592295 SHA1 61ac0dab413af4dafd7048f15728238e7f542811 SHA256 58052626ab45ed5af63b5bfa04ba2f74529bc1f56652de146484f85acba67700
-MISC ChangeLog 1990 RMD160 b2c518ca2a780a42b8e6d48f761ed69aebb73281 SHA1 5be6a9c8cbda2f5d21a0553da3f84187d79d923d SHA256 48d371235043e461a63ad6b7ba63a57a469c9feaf254f82d7f49236afebd48b1
+MISC ChangeLog 2140 RMD160 cd14d46f03b26ae12c7e7b785edd692d420b084b SHA1 459c2965334296b6c6ef5d4e746b46149137c0b7 SHA256 da816f25061454e73024f9af0e6c5d2e56e36d886a68c2f272ed0e536ec6b2eb
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
