@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.9 (03 Mar 2010)
+
+  03 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-server-2.1.9.ebuild:
+  Version bump.
+
 *calculate-server-2.1.6-r1 (03 Dec 2009)
 
   03 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
