@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.1.11 (03 Mar 2010)
+  03 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-client-2.1.11.ebuild:
+  Bump version.
+
 *calculate-client-2.1.9 (02 Dec 2009)
 
   02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
